Try to fix spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -201,6 +201,37 @@ footer {
   bottom:50px;
 }
 
+/* Custom spacing fixes for the academic website */
+section h3 {
+  margin-bottom: 10px;
+  margin-top: 25px;
+}
+
+section h3:first-of-type {
+  margin-top: 0;
+}
+
+section ol li {
+  margin-bottom: 15px;
+}
+
+section ol li:last-child {
+  margin-bottom: 0;
+}
+
+section div[id] {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+section p {
+  margin-bottom: 15px;
+}
+
+section p:last-child {
+  margin-bottom: 0;
+}
+
 @media print, screen and (max-width: 960px) {
   
   div.wrapper {
